hphp/test/slow/nullsafe/nullsafe-prop-7.php.expectf
Fatal error: ?-> is not allowed with $this in %s/test/slow/nullsafe/nullsafe-prop-7.php on line 6
